--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,9 @@
 {
-  "semi": true,
-  "singleQuote": false,
-  "trailingComma": "es5",
-  "printWidth": 100,
-  "tabWidth": 2,
-  "plugins": ["prettier-plugin-tailwindcss"]
+	"semi": true,
+	"singleQuote": false,
+	"trailingComma": "es5",
+	"tabWidth": 2,
+	"useTabs": true,
+	"endOfLine": "lf",
+	"plugins": ["prettier-plugin-tailwindcss"]
 }
