--- a/.editorconfig
+++ b/.editorconfig
@@ -12,5 +12,13 @@ trim_trailing_whitespace = true
 [*.md]
 trim_trailing_whitespace = false
 
+[*.yml]
+indent_style = space
+indent_size = 2
+
+[*.yaml]
+indent_style = space
+indent_size = 2
+
 [Makefile]
 indent_style = tab
