--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "eslint . --ext .js,.jsx,.ts,.tsx,.mjs,.cjs --max-warnings=0",
+		"lint": "eslint .",
+		"lint:strict": "eslint . --max-warnings=0",
 		"format": "prettier --write .",
 		"format:check": "prettier --check .",
 		"typecheck": "tsc -p tsconfig.json --noEmit",
