--- a/.prettierignore
+++ b/.prettierignore
@@ -2,3 +2,13 @@
 node_modules
 dist
 coverage
+
+# lockfiles (생성물이라 Prettier 제외)
+pnpm-lock.yaml
+yarn.lock
+package-lock.json
+
+# 빌드 산출물
+out
+build
+
