docs: add md to ignore format settings

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,9 +36,8 @@ jobs:
 
       - name: EditorConfig check
         run: pnpm run lint:config
-
-      - name: Prettier check
-        run: pnpm run format:check
+      - name: Prettier check (write)
+        run: pnpm run format:check --write
 
       - name: ESLint (strict)
         run: pnpm run lint:strict
