--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"lint:config": "editorconfig-checker"
 	},
 	"dependencies": {
+		"firebase": "^12.6.0",
 		"next": "16.0.1",
 		"react": "19.2.0",
 		"react-dom": "19.2.0"
