--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"format": "prettier --write .",
 		"format:check": "prettier --check .",
 		"typecheck": "tsc -p tsconfig.json --noEmit",
-		"lint:config": "editorconfig-checker"
+		"lint:config": "editorconfig-checker",
+		"deploy": "npm run build && firebase deploy"
 	},
 	"dependencies": {
 		"firebase": "^12.6.0",
