--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
 		"format": "prettier --write .",
 		"format:check": "prettier --check .",
 		"typecheck": "tsc -p tsconfig.json --noEmit",
-		"lint:config": "editorconfig-checker",
-		"deploy": "npm run build && firebase deploy"
+		"lint:config": "editorconfig-checker"
 	},
 	"dependencies": {
 		"firebase": "^12.6.0",
