--- a/.editorconfig
+++ b/.editorconfig
@@ -22,5 +22,9 @@ indent_size = 2
 indent_style = space
 indent_size = 2
 
+[*.rules]
+indent_style = space
+indent_size = 2
+
 [Makefile]
 indent_style = tab
