--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
 		"lint:config": "editorconfig-checker"
 	},
 	"dependencies": {
+		"clsx": "^2.1.1",
 		"firebase": "^12.6.0",
 		"next": "16.0.1",
 		"react": "19.2.0",
-		"react-dom": "19.2.0"
+		"react-dom": "19.2.0",
+		"tailwind-merge": "^3.4.0"
 	},
 	"devDependencies": {
 		"@svgr/webpack": "^8.1.0",
