--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"next": "16.0.1",
 		"react": "19.2.0",
 		"react-dom": "19.2.0",
-		"swr": "^2.3.6"
+		"swr": "^2.3.6",
 		"tailwind-merge": "^3.4.0"
 	},
 	"devDependencies": {
