feat: 용어 인덱스 및 헬퍼 함수 추가

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"format": "prettier --write .",
 		"format:check": "prettier --check .",
 		"typecheck": "tsc -p tsconfig.json --noEmit",
-		"lint:config": "editorconfig-checker"
+		"lint:config": "editorconfig-checker",
+		"gen:index": "node scripts/generate-terms-index.mjs"
 	},
 	"dependencies": {
 		"clsx": "^2.1.1",
