--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"dependencies": {
 		"clsx": "^2.1.1",
 		"firebase": "^12.6.0",
+		"framer-motion": "^12.23.24",
 		"next": "16.0.1",
 		"react": "19.2.0",
 		"react-dom": "19.2.0",
