--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
 		"gen:index": "node scripts/generate-terms-index.mjs"
 	},
 	"dependencies": {
+		"@google/generative-ai": "^0.24.1",
 		"clsx": "^2.1.1",
 		"firebase": "^12.6.0",
 		"framer-motion": "^12.23.24",
 		"next": "16.0.1",
 		"react": "19.2.0",
 		"react-dom": "19.2.0",
+		"react-markdown": "^10.1.0",
+		"remark-breaks": "^4.0.0",
+		"remark-gfm": "^4.0.1",
 		"swr": "^2.3.6",
 		"tailwind-merge": "^3.4.0"
 	},
