--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
-		"build": "next build",
+		"build": "npm run gen:index && next build",
 		"start": "next start",
 		"lint": "eslint .",
 		"lint:strict": "eslint . --max-warnings=0",
